--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
-        <!-- Показывает стэк ошибки на вебе в отличие от spring-boot-starter-tomcat -->
+        <!-- Показывает стэк ошибки на вебе -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
